kind-cluster/ingress-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app-deployment
  labels:
    app: first
spec:
  selector:
    matchLabels:
      app: first
  template:
    metadata:
      labels:
        app: first
    spec:
      containers:
        - name: first-app
          image: localhost:5001/nodeweb:v1.0
          ports:
            - containerPort: 3000
          resources: {}
---
kind: Service
apiVersion: v1
metadata:
  name: first-service
spec:
  selector:
    app: first
  ports:
    # Default port used by the image
    - port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-app-deployment
  labels:
    app: second
spec:
  selector:
    matchLabels:
      app: second
  template:
    metadata:
      labels:
        app: second
    spec:
      containers:
        - name: second-app
          image: localhost:5001/nodeweb:v1.0
          ports:
            - containerPort: 3000
          resources: {}
---
kind: Service
apiVersion: v1
metadata:
  name: second-service
spec:
  selector:
    app: second
  ports:
    # Default port used by the image
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /first(/|$)(.*)
            backend:
              service:
                name: first-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /second(/|$)(.*)
            backend:
              service:
                name: second-service
                port:
                  number: 3000
---
